# DiffMem

./: .dockerignore  .env.example  .gitignore  API_EXAMPLES.md  API_README.md  DEPLOYMENT_SUMMARY.md  Dockerfile  FIXED_IMPORT_ISSUE.md  GITHUB_SYNC_FIXED.md  IMPORT_AND_GIT_GUIDE.md  JON_MORGENSTERN_USAGE.md  MULTI_USER_GUIDE.md  QUICK_IMPORT_SUMMARY.md  QUICK_MULTI_USER.md  QUICK_START.md  README.md  SERVER_README.md  SETUP_GUIDE.md  UNRAID_DEPLOYMENT.md  create_new_user_example.sh  debug_onboarding.py  docker-compose.yml  env.docker  env.example  example_import.sh  port-variable-plan.md  pyproject.toml  repo_guide.md  requirements-server.txt  requirements.txt  simple_test.py  test_context.py
deploy/: docker-compose.hatchet.yml
docs/: CODE_INDEX.md  annabelle-migration.md  api-surface.md  deployment-hatchet.md  deployment.md
examples/: api_usage.py  onboarding_example.py  server_client.py
notes/: agentic_dev_guide.md  ideas_and_changes.md
ontologies/: README.md
ontologies/corporate/: repo_guide.md  schema.json
ontologies/corporate/prompts/: 1_identify_entities.txt  2_create_entity_file.txt  3_update_entity_file.txt  build_index.txt  onboard_identify_entities.txt  onboard_user_entity.txt
scripts/: smoke_hatchet_live.py
src/diffmem/: CONTEXT.md  __init__.py  api.py  conformance.py  frontmatter.py  registry.py  repo_manager.py  server.py  status.py
src/diffmem/bm25_indexer/: CONTEXT.md  api.py  indexer.py
src/diffmem/consolidator_agent/: CONTEXT.md  __init__.py  _dedupe.py  _link.py  _reabsorb.py  _redistribute.py  _shared.py  agent.py  lock.py
src/diffmem/context_manager/: CONTEXT.md  __init__.py  agent.py
src/diffmem/executor/: CONTEXT.md  __init__.py  (+7 more)
tests/: _fixtures.py  test_consolidator_api.py  test_consolidator_dedupe.py  test_consolidator_e2e.py  test_consolidator_link.py  test_consolidator_lock.py  test_consolidator_reabsorb.py  test_consolidator_redistribute.py  test_corporate_e2e.py  test_corporate_ontology.py  test_executor_e2e_hatchet.py  test_executor_e2e_inline.py  test_executor_endpoints.py  test_executor_hatchet.py  test_executor_hatchet_worker.py  test_executor_inline.py  test_followups_index.py  test_frontmatter_status_conformance.py  test_ontology.py  test_ontology_e2e.py  test_ontology_template_rendering.py  test_registry.py  test_writer_agent_thread_safety.py
(+47 files in other folders)
